Bug 785909 - Don't init FileMediaResource::mSize on the main thread. r=roc